--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "email"    : "Enter your Gmail Address",
-  "password" : "Password Of Your Gmail"
+  "email"    : "durdantyler237@gmail.com",
+  "password" : "420H@rlan11"
 }
